tests/fail/t12.e
l. 1 array field not possible as parameter
l. 2 arr not defined
l. 6 i not defined
